FastLog 开发日志

=====================================

> 作者： 荣涛
> 时间：2021年6月 - 


# 编码历史

* 2021年6月17日
	* decoder: show level 命令行
	* decoder: getopt 命令行参数
* 2021年6月16日 
	* decoder reprintf: 恢复字符串的输出。
	* txt 的输出
	* linenoise 新建
* 2021年6月11日 decoder timestamp
* 2021年6月10日 解析命令 数据结构设计
* 2021年6月9日 添加 日志 解析 main() 程序
* 2021年6月8日 添加 stagingBuffer 功能，移植自 NanoLog
* 2021年6月3日 rdtsc部分；log_id获取；
* 2021年5月21日    创建源码文件
